# TinyStudentINFOWeb

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  conf.h  main.cpp
db/: autasker.db
include/: Auth.h  DatabaseManager.h  Handlers.h  NetServer.h  ThreadPool.h  Utils.h
src/: Auth.cpp  DatabaseManager.cpp  Handlers.cpp  NetServer.cpp  Utils.cpp
www/: 404.html  admin.html  index.html  login.html  logs.html  register.html  student.html
